@@ -378,6 +378,9 @@ Release 2.8.0 - UNRELEASED
     MAPREDUCE-6376. Add avro binary support for jhist files (Ray Chiang via
     jlowe)
 
+    MAPREDUCE-6394. Speed up Task processing loop in HsTasksBlock#render()
+    (Ray Chiang via jlowe)
+
   BUG FIXES
 
     MAPREDUCE-6314. TestPipeApplication fails on trunk.
